# firebird-trace-parser

./: .gitignore  README.md  main.py  pyproject.toml
matcher/: __init__.py  loader.py  rules.py  rules.toml
models/: __init__.py  enums.py  models.py
parser/: __init__.py  engine.py  handlers.py  utils.py
