[project]
name = "firebird-trace-parser"
version = "0.1.0"
description = "библиотека для обработки логов трассировки Firebird. Парсер преобразует текстовые логи в структурированные Python объекты, что позволяет проводить анализ производительности, отслеживать SQL-запросы и выявлять узкие места в работе с БД. "
requires-python = ">=3.12"
authors = [
    {name = "deliciousNesquik", email = "byte.in4matic@gmail.com"}
]
dependencies = [
    "regex>=2026.4.4",
    "regexp>=0.1",
]
